<resources>
    <string name="app_name">SQMint</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>

    <!--Login Activity-->
    <string name="btn_login">Login</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="tv_empty_field">Fill the empty field below</string>

    <!-- Main Activity -->
    <string name="job_fragment">Jobs</string>
    <string name="usage_fragment">Usage</string>
    <string name="user_fragment">User</string>
    <string name="server_fragment">SQMint</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="title_activity_add_user">AddUser</string>

    <!-- Add User -->
    <string name="tv_add_user_info">*insert LDAP IPB username</string>
    <string name="tv_not_valid_admin">Username is not valid</string>

    <string name="btn_signup">Sign up</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
