<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_margin_top">

        <TextView
            android:id="@+id/tvEmptyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_empty_field"
            android:textColor="@color/fieldOnError"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etUsername_addUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEmptyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_add_user_info"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="24dp"
            android:background="#549788"
            android:text="@string/btn_signup"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_margin_top">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:visibility="invisible"/>

    </LinearLayout>


</FrameLayout>
